<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/principalTitulo"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center_horizontal"
            android:textSize="@dimen/dimenTitulo"
            android:textColor="@color/colorPrimaryText"
            android:padding="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/perfil"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/principalCajaNombre"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorPrimaryText"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/principalCajaApellido"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/principalCajaCorreo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/principalCajaUsuario"
            android:textColor="@color/colorPrimaryText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/principalCajaContrasenia"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryText"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/principalCajaCI"
                android:inputType="number"
                android:textColor="@color/colorPrimaryText"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/principalCajaCelular"
                android:inputType="number"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_gravity="center_vertical"
                android:text="@string/principalTextoGenero"
                android:layout_marginRight="10dp"/>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/principalRadioFemenino"
                    android:textColor="@color/colorPrimaryText"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/principalRadioMasculino"
                    android:textColor="@color/colorPrimaryText"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/principalRadioSinEspecificar"
                    android:textColor="@color/colorPrimaryText"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/principalCajaObservacion"
            android:textColor="@color/colorPrimaryText"
            android:lines="3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/principalTextoIntereses"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/dimenSeccion"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Java"
                android:textColor="@color/colorPrimaryText"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="PHP"
                android:textColor="@color/colorPrimaryText"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="C#"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Kotlin"
                android:textColor="@color/colorPrimaryText"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Python"
                android:textColor="@color/colorPrimaryText"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="C"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Swift"
                android:textColor="@color/colorPrimaryText"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="C++"
                android:textColor="@color/colorPrimaryText"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Scala"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/principalBotonCancelar"
                android:textSize="@dimen/dimenTextoBoton"
                android:textColor="@color/colorPrimaryText"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/principalBotonAceptar"
                android:textSize="@dimen/dimenTextoBoton"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>